--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         <title>trillo &mdash; Your all-in-one booking app</title>
     </head>
     <body>
-        <h1>Trillo</h1>
+        <div class="container">
+            <header class="header">HEADER</header>
+            <div class="content">
+                <nav class="sidebar">SIDE BAR</nav>
+                <main class="hotel-view">
+                    HOTEL VIEW
+                </main>
+            </div>
+        </div>
     </body>
 </html>
