--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="container">
             <header class="header">
                 <img src="img/logo.png" alt="trillo logo" class="logo">
-                <form action="#" class="form">
-                    <input type="text" class="search__input">
+                <form action="#" class="search">
+                    <input type="text" placeholder="Search hotels" class="search__input">
                     <button class="search__button">
                         <svg class="search__icon">
                             <use xlink:href="img/sprite.svg#icon-magnifying-glass"></use>
