--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                     </div>
                     <div class="user-nav__user">
                         <img src="img/user.jpg" alt="user photo" class="user-nav__user-photo">
+                        <div class="user-nav__user-name">Jonas</div> 
                     </div>
+                    
                 </nav>
             </header>
             <div class="content">
